--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>Landing Page</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            Header
+        </header>
+        <content>
+            Content 
+        </content>
+        <footer>
+            Footer
+        </footer>
+    </body>
+</html>
