Added some style to the landing page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     </head>
     <body>
         <header>
-            Header
+            <h1>Logo</h1>
+            <ul>
+                <li><a href="https://www.google.com">Google</a> </li>
+                <li><a href="https://www.duckduckgo.com">Duck Duck Go</a> </li>
+                <li><a href="https://www.apple.com">Apple</a> </li>
+            </ul>
         </header>
         <content>
             Content 
