Added to credit.html

--- a/credit.html
+++ b/credit.html
@@ -1,34 +1,41 @@
-<ul>
-    <li>
-        Photo by <a
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Credits</title>
+    <link rel="stylesheet" href="style">
+</head>
+    <ul>
+        <li>
+            Photo by <a
             href="https://unsplash.com/@filtaio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Filippo
             Taioli</a> on <a
             href="https://unsplash.com/images/animals/dog?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </li>
-
-    <li>
-        Photo by <a
+        </li>
+        
+        <li>
+            Photo by <a
             href="https://unsplash.com/@mutedtone?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Christopher
             Ayme</a> on <a
             href="https://unsplash.com/images/animals/dog?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </li>
-    <li>
-        Photo by <a
+        </li>
+        <li>
+            Photo by <a
             href="https://unsplash.com/@vincentvanzalinge?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Vincent
             van Zalinge</a> on <a
             href="https://unsplash.com/images/animals/dog?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </li>
-    <li>
-        Photo by <a
+        </li>
+        <li>
+            Photo by <a
             href="https://unsplash.com/@victor_vector?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Victor
             Grabarczyk</a> on <a
             href="https://unsplash.com/images/animals/dog?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </li>
-    <li>
-        Photo by <a
+        </li>
+        <li>
+            Photo by <a
             href="https://unsplash.com/@alondrapvn09?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alondra
             Pavón</a> on <a
             href="https://unsplash.com/images/animals/dog?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-
-    </li>
-</ul>
+            
+        </li>
+    </ul>
+    </html>
