Major changes to the style
Added the 4 pictures of the dogs.
Moved them around some the pictures were centered.
Added a bit of information to each dog.
Removed placeholder text.

--- a/index.html
+++ b/index.html
@@ -15,75 +15,54 @@
             <li><a href="https://www.apple.com">Apple</a> </li>
         </ul>
     </header>
+    <!-- First Section -->
     <content class="question">
-        <div>
-
-            <h1>
-                Why are dogs awesome? Just look at them.
-            </h1>
+        <div class="left">
+            <h1>Why are dogs awesome?</h1>
+            <h2>Just look at them.</h2>
             <p>From purebreds to muts dogs help us in many ways. They love us unconditionally, make us laugh, and force
                 us out of the house. </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aut debitis fugit nesciunt, sed dolor soluta illum. Doloremque tempora nesciunt quibusdam voluptas nisi eius voluptates aliquid laborum. Minima, quae aliquam?
-            Illum neque suscipit corporis facere. Possimus, veniam nemo sint ipsum necessitatibus quas voluptate! Molestias culpa libero assumenda, amet magnam ab earum beatae sequi reprehenderit, at expedita odio obcaecati quo! Ut?
-            Aut iste commodi voluptatibus quaerat saepe repudiandae, magni officiis possimus harum quasi recusandae quos quisquam reprehenderit ratione numquam consequuntur nostrum minus corrupti error placeat. Inventore doloremque explicabo similique nesciunt minima.
-            Veritatis repudiandae quia officia odit quas possimus nulla voluptas, est exercitationem beatae magnam earum voluptatibus, provident non quae, ab dignissimos culpa expedita consectetur. Ut iure nemo sequi voluptate, voluptates mollitia.
-            Voluptatem, dignissimos? Illo quisquam voluptate temporibus non, numquam aliquid cupiditate, perspiciatis repellendus impedit ipsam veritatis nemo aspernatur amet tempore atque minus delectus saepe libero ea sit consectetur commodi? Sed, maxime!
-            Voluptatum, architecto rerum laboriosam atque in eos excepturi accusantium? Ipsum possimus aut est in, quam neque. Dolor officia neque sunt fugiat eaque facere magnam? Dignissimos expedita quo aperiam optio possimus?
-            Cupiditate, rem veritatis eos id animi suscipit deserunt, odio quo tempore delectus iure corporis, voluptatem rerum? Dolor ducimus illum maxime saepe quidem, reprehenderit pariatur doloribus sapiente? Facilis eum corrupti quasi.
-            Repudiandae pariatur, vel, architecto laborum eaque quasi corrupti cum minima assumenda minus aliquam. Vero necessitatibus minima vitae iusto, unde rem asperiores maiores dolorem recusandae impedit, repellendus facere incidunt? Nobis, excepturi.
-            Temporibus quod aspernatur cupiditate tenetur, magni unde. Soluta, fugiat aliquam temporibus modi beatae atque! Id, quos. Quas eum autem totam magnam minima laboriosam exercitationem est? Facere perferendis similique aspernatur laborum!
-            Mollitia esse, iste tenetur iusto, quos tempora qui, ducimus iure odit rem maiores placeat. Facere deleniti necessitatibus ea ducimus dolorum earum vero minima sunt ut id, alias, distinctio laudantium ratione.
-            Minus non accusamus quos magnam animi nobis, ipsa quo aperiam consequatur ratione ipsam quis similique vitae quam dolores maxime est? Aperiam ratione minus soluta corporis odit veritatis eius asperiores praesentium?
-            Sunt, quam ex. Minus, illum. Accusantium quo error vero. Odio explicabo repudiandae ab commodi quo blanditiis soluta fugit. Suscipit, distinctio? Iusto animi ipsa doloribus beatae fugit praesentium nihil nemo unde.
-            A nobis nihil aliquam iure libero, odit at non sint ad sequi suscipit earum ullam fuga alias pariatur, eligendi molestias, provident deleniti distinctio reprehenderit possimus quos! Deleniti ab beatae accusamus.
-            Atque reprehenderit laboriosam delectus, dolor modi quaerat unde amet non sint maxime perspiciatis culpa voluptatum eius est doloribus officiis natus quae aut eum corrupti molestias ducimus quibusdam deleniti aperiam. Nemo?
-            Qui sunt maiores fugit at, delectus odio beatae suscipit totam deleniti optio aliquid iusto repellat non! Atque, autem minus nostrum natus odio facilis illo? Est expedita reprehenderit accusantium commodi fugiat.
-            Distinctio fugiat consectetur rem similique, architecto minima a est doloribus rerum soluta dignissimos corporis cum tenetur nemo quas? Voluptas, fugit fuga doloremque sapiente ex quisquam commodi voluptatibus ut facilis labore?
-            Natus dolore, explicabo neque perferendis veritatis omnis ea voluptatibus aliquam quod, voluptas laborum asperiores voluptatem quis aperiam quos sint tempora amet? Pariatur suscipit porro in fugit esse obcaecati sit eius!
-            Natus suscipit fugiat labore maiores magnam voluptatum reiciendis deleniti sit quidem placeat, ut rerum ullam cum. Harum odit iste officiis doloremque nihil suscipit saepe accusamus repudiandae, tempore, quod, dolores nisi.
-            Voluptatibus, veritatis esse ducimus mollitia dignissimos dolor quia blanditiis earum explicabo ex aliquam sed facilis doloribus necessitatibus alias et cupiditate aspernatur? Natus culpa illo officiis porro necessitatibus excepturi deleniti eos?
-            Molestiae voluptate illum quae cumque! Nesciunt dignissimos, tempora sint aut nisi nihil iusto adipisci ab eveniet eos mollitia voluptatem ullam qui ipsam maiores molestias reprehenderit, laborum, cum nulla odit. Esse?
-            Laudantium fugit ipsum perferendis saepe cum atque cumque eius eveniet, nihil mollitia amet aut odio quam explicabo culpa repellat, accusamus quia iure quae, quidem at illo sit. Ad, nisi id.
-            Esse unde ullam possimus nulla deleniti at voluptatem repellendus, neque non nobis aliquid, in rerum, mollitia incidunt veritatis? Possimus nisi magnam a. Totam perferendis atque dolor dolore iure, facilis voluptatem.
-            Labore expedita eius voluptates nulla et consectetur reiciendis molestiae modi ipsum veniam qui esse impedit error at minus quidem nam, numquam ducimus aut harum illo? Obcaecati hic eos facere exercitationem!
-            Error, explicabo fugit reiciendis hic iusto praesentium repellendus adipisci aliquid enim ullam, quia ea asperiores accusantium culpa, molestias corrupti dignissimos? Magni eos ducimus itaque? Vitae esse aliquam iste maiores reiciendis?
-            Fuga consequuntur consequatur voluptate quia repudiandae dicta soluta vero corrupti numquam quis eos, aperiam possimus neque excepturi doloribus maiores. Ex, labore. Aut nisi itaque cupiditate distinctio ullam porro maxime fugit.
-            Odio, alias dicta repellendus veritatis a doloremque necessitatibus? Odit a sit ratione voluptates blanditiis at quia iure vel. Consequatur accusantium nobis, laborum aliquid dolores dolorum nesciunt ad fuga fugiat enim.
-            Magnam magni aut sint earum autem, explicabo itaque esse consequatur, eius sapiente ex quos illum! Aliquid quibusdam illo voluptatibus iusto nam necessitatibus neque, quia ab facere dolore! A, nesciunt officia.
-            Facere dolore ex laborum aut explicabo ut sequi ipsa corporis pariatur commodi quia amet numquam illo aliquid earum sit unde exercitationem eum, saepe sapiente obcaecati necessitatibus neque consequuntur? Veniam, magnam.
-            Culpa ullam sint illo quo, esse quas cum iure nemo aliquid modi. Sequi consectetur nemo aut? Voluptate a officiis, distinctio nulla, dolorem facilis illum nam reprehenderit cumque, optio placeat itaque.
-            Cumque harum sapiente distinctio. Molestias quas corporis doloribus eius incidunt totam obcaecati dolorum repellat, dolorem eos porro numquam blanditiis assumenda expedita autem voluptatem quae nostrum debitis fuga qui dignissimos laudantium!
-            Ipsam veniam quibusdam dolore hic eligendi blanditiis fugiat, vel dolorum laboriosam unde commodi ratione sit inventore magni minus nihil error, molestiae voluptate. Facilis quibusdam eaque dolorem maxime provident, non laborum!
-            Quidem deserunt autem odio quaerat numquam expedita, enim nisi nostrum facere voluptates laboriosam sapiente. Similique, rerum iure obcaecati pariatur vero fuga, eligendi ut architecto dignissimos a tenetur itaque, id placeat?
-            Tempore similique autem harum error quos nobis. Quod iusto velit aperiam culpa amet ullam tempora iure earum quae quos sed perferendis eos ipsa, accusamus unde eligendi omnis. Nemo, optio mollitia.
-            Accusantium eius, repudiandae error ullam rem, dolorum animi quidem, dicta est perspiciatis culpa necessitatibus! Deleniti esse consequatur laborum unde, qui libero architecto aspernatur cumque harum molestias ipsum! Placeat, iste earum?
-            Commodi explicabo tempore natus, voluptas vitae esse eius libero hic dolorem veritatis quam, harum voluptatem doloribus! Odit unde sint laborum eius amet magni, esse architecto nihil maxime placeat? Eaque, possimus?
-            Voluptas nostrum itaque rem maxime officia dolorem vitae iste laborum et cum, sed est, quas, impedit qui? Explicabo eveniet eum maxime quas asperiores fuga, ipsam ullam praesentium harum vero molestias.
-            Illo dolore ut placeat, ad sequi nam quia enim voluptatibus eveniet asperiores maiores architecto iste exercitationem minima ex, praesentium nostrum dicta quidem facilis. Aut laborum reprehenderit officiis voluptatibus culpa eligendi.
-            Tempora, deleniti commodi facilis consequatur repellendus illum praesentium similique nemo architecto eum, ab laudantium voluptatum nihil possimus eligendi quasi, maiores tenetur. Doloribus sed nobis rem quisquam provident vitae, dolores veniam.
-            Quo odio repellat repellendus! Odio libero eaque incidunt mollitia. Totam velit tenetur labore alias ullam similique cupiditate fugiat eos hic, quibusdam, modi laboriosam magnam architecto commodi illo quas quaerat aliquid!
-            Fugiat cupiditate possimus deleniti recusandae. Rem explicabo minus amet dolores non eligendi, blanditiis, accusantium, molestias delectus suscipit harum expedita! Dolore ab nostrum reprehenderit placeat corrupti ratione laborum modi, laudantium ipsa!
-            Deserunt non ipsam quo ut? Unde repellendus necessitatibus veritatis perferendis libero asperiores, dolores odio atque iste expedita itaque reprehenderit molestias non ipsa inventore ullam assumenda? Rem reprehenderit pariatur assumenda beatae!
-            Voluptates, optio soluta provident reiciendis non beatae facere cupiditate deleniti sit velit iste unde ducimus accusantium veniam ipsum sed facilis tempore alias aut eius voluptatibus fugit consequuntur quia. Sapiente, voluptas.
-            Nostrum id culpa illo et facere voluptatem pariatur magnam ducimus quam ut expedita suscipit totam incidunt, laboriosam hic doloribus quod voluptate soluta fugit eum, ab possimus. Earum eum corrupti ut!
-            Rerum vitae expedita, iure vero voluptatem a dolor ratione qui aspernatur sit distinctio at eligendi officia fugit odit voluptas. Illo odio assumenda repellendus accusamus aliquam aperiam libero porro vero quis?
-            Doloribus animi perferendis deserunt, quisquam, accusantium quidem sint dolor ut neque minima minus repellendus temporibus itaque fugit, officiis rem labore. Unde error dolore sed tempore ab impedit modi, ipsum provident?
-            Nisi commodi, perspiciatis vel aliquid deleniti, voluptatum corporis excepturi delectus qui officiis aspernatur sed possimus dolorum facilis tempore dolore magnam laudantium veniam consectetur unde consequuntur consequatur tenetur dolores perferendis! Sit.
-            Id perferendis illum repellat quasi, aspernatur iure nostrum praesentium, quas, tempore quia nihil labore iste suscipit! Sequi cumque aut inventore pariatur et facere rem quasi, nobis repellat aliquid similique assumenda.
-            Quia saepe, quibusdam commodi, quos culpa voluptatem consequatur aperiam iusto voluptatibus mollitia ex distinctio quas officiis? Deserunt perferendis, amet, quod est earum molestias eos voluptatibus rem impedit, illum repellendus culpa!
-            Vel quam quas iure ad labore voluptatibus, neque explicabo, tempora rerum iste quos saepe dicta repellendus. Debitis magni mollitia ab, sit necessitatibus iste vitae neque rem, vel soluta fugiat culpa.
-            Ipsa voluptate inventore numquam. Blanditiis distinctio doloremque deleniti! Fuga minus, quo dolores asperiores modi itaque, cumque aliquid necessitatibus quaerat sed soluta nam, atque sapiente! Cupiditate ab provident porro quae doloribus.</p>
         </div>
-        <div>
-            <img style="width: 50%; object-fit: cover; object-position: 100% 0;"
-                src="./images/vincent-van-zalinge-v3k7Ub4lnGk-unsplash.jpg" alt="dog">
+        <div class="right">
+            <img src="./images/vincent-van-zalinge-v3k7Ub4lnGk-unsplash.jpg" alt="dog">
+
         </div>
     </content>
+    <!-- Second Section -->
     <content>
-        <!-- <img src="./images/alondra-pavon-atTzhE48WXI-unsplash.jpg" alt="dog">
-            <img src="./images/christopher-ayme-ocZ-_Y7-Ptg-unsplash.jpg" alt="dog">
+        <div class="top">
+            <h1>Some helpful information.</h1>
+        </div>
+    </content>
+    <content class="information">
+        <div class="fun_fact">
+            <img style="object-position: 60% 0;" src="./images/christopher-ayme-ocZ-_Y7-Ptg-unsplash.jpg" alt="dog">
+            <p>
+                Pit bulls have a bad reputation but are very loving and protective dogs.
+                They will forever love you and your family.
+            </p>
+        </div>
+        <div class="fun_fact">
+            <img style="object-position: 100% 50%;" src="./images/alondra-pavon-atTzhE48WXI-unsplash.jpg" alt="dog">
+            <p>
+                Dachshunds are adorable and love to be around you all day. Great for anyone who loves to snuggle. A cute
+                little buddy.
+            </p>
+        </div>
+        <div class="fun_fact">
             <img src="./images/filippo-taioli-cYX05NEAtUw-unsplash.jpg" alt="dog">
-            <img src="./images/victor-grabarczyk-N04FIfHhv_k-unsplash.jpg" alt="dog"> -->
+            <p>
+                Bull dogs are strong, stubborn, and loving. Great for anyone that doesn't want to walk all day.
+            </p>
+        </div>
+        <div class="fun_fact">
+            <img style="object-position: 80% 0;" src="./images/victor-grabarczyk-N04FIfHhv_k-unsplash.jpg" alt="dog">
+            <p>
+                Terriers are great at herding your family. If you have kids they will always make sure your kids are
+                were they are supposed to be.
+            </p>
+        </div>
+        </div>
     </content>
     <footer>
         <a href="./credit.html">Credits</a>
