Finish adding the call to action
Added text to the call to action section.
Changed some colors for more cohesion.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
         </div>
         </div>
     </content>
+    <!-- 3rd Section -->
+    <content class="quote">
+        <div>
+            <p>
+                This is where we are told that dogs are the best thing ever. Well they are. They are fun to be around.
+                They will never leave you once they are attached to you. They will love you forever. THey will sit by
+                you and be content. They will share their toys with you. They will sleep next to you all day.
+            </p>
+            <h3 class="right">
+                -A Random Dog
+            </h3>
+        </div>
+    </content>
+    <!-- 4th Section -->
+    <content class="action">
+        <div class="email">
+
+            <div class="block">
+                <h3>
+                    Time to sign up for emails!
+                </h3>
+                <p>
+                    Sign up for our email newsletter so that we can bother you with emails everyday. 
+                </p>
+            </div>
+            <button>
+                Sign up
+            </button>
+        </div>
+    </content>
     <footer>
         <a href="./credit.html">Credits</a>
     </footer>
